flow_test/should_fail/.flowconfig
[ignore]

[include]
../../src

[libs]

[options]
